--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -221,11 +221,12 @@ We prove this result (thus obtaining a new proof of \cite[Theorem 9.1]%
 Bender-Knuth involutions to reverse plane partitions; these generalized
 involutions are constructed using a form of the \textit{diamond lemma} (Lemma
 \ref{lem.diamond}).
-
-\begin{todo}
-Pavel: advertise your section here? It sort-of gives some justification for
-why the $t_{i}$ are a natural thing to consider too.
-\end{todo}
+Then, we prove it for a second time by analyzing the structure of reverse
+plane partitions whose entries lie in $\left\{1, 2\right\}$. The second
+proof reflects back on the first, in particular providing an
+alternative definition of the generalized Bender-Knuth involutions
+constructed in the first proof, and showing that these involutions
+are (in a sense) ``the only reasonable choice''.
 
 The present paper is organized as follows: In Section \ref{sect.notations}, we
 recall classical definitions and introduce notations pertaining to
@@ -241,10 +242,13 @@ application of it that serves to demonstrate its use. In Section
 involution using the diamond lemma. In Section \ref{sect.BKclassical}, we
 recapitulate the definition of the classical Bender-Knuth involution, and
 sketch the proof that our involution is a generalization of the latter.
-
-\begin{todo}
-Pavel: your last section should also be summarized here.
-\end{todo}
+Finally, in Section \ref{sect.structure} we study the structure of
+reverse plane partitions with entries belonging to $\left\{1, 2\right\}$,
+which (in particular) gives us an explicit formula for the
+$\mathbf{t}$-coefficients of $\g_\lm(x_1,x_2,0,0,\dots;\t)$, and shines
+a new light on the involution constructed in Section \ref{sect.proof}
+(also showing that it is the unique involution that shares certain natural
+properties with the classical Bender-Knuth involutions).
 
 \begin{todo}
 What is missing from the above introduction? Specifically:
