Stupid latex bugs in alt version corrected

--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -245,8 +245,10 @@ sketch the proof that our involution is a generalization of the latter.
 Finally, in Section \ref{sect.structure} we study the structure of
 reverse plane partitions with entries belonging to $\left\{1, 2\right\}$,
 which (in particular) gives us an explicit formula for the
-$\mathbf{t}$-coefficients of $\g_\lm(x_1,x_2,0,0,\dots;\t)$, and shines
-a new light on the involution constructed in Section \ref{sect.proof}
+$\mathbf{t}$-coefficients of
+$\widetilde{g}_{\lambda/\mu}(x_1,x_2,0,0,\dots;\mathbf{t})$,
+and shines a new light on the involution constructed in
+Section \ref{sect.proof}
 (also showing that it is the unique involution that shares certain natural
 properties with the classical Bender-Knuth involutions).
 
@@ -10019,7 +10021,7 @@ In this section, we let $\kk$ be the polynomial ring
 $\Z\left[t_1, t_2, t_3, \ldots\right]$ in countably many
 indeterminates, and we restrict ourselves to the
 two-variable dual stable Grothendieck polynomial
-$\g_\lm(x_1,x_2,0,0,\dots;\t)$ defined as the result of
+$\g_\lm(x_1,x_2,0,0,\dots;\mathbf{t})$ defined as the result of
 substituting $0, 0, 0, \ldots$ for $x_3, x_4, x_5, \ldots$
 in $\g_\lm$. We can represent it as a polynomial in
 $\t$ with coefficients in $\Z[x_1,x_2]$:
